--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ project(vulkan-compute-hello)
     set(CMAKE_CXX_STANDARD 20)
 
     find_package(Vulkan REQUIRED COMPONENTS shaderc_combined)
+    add_executable(vulkan-compute-hello-hpp main_vkhpp.cpp)
     add_executable(vulkan-compute-hello main.cpp)
 
+    target_link_libraries(vulkan-compute-hello-hpp PRIVATE Vulkan::Vulkan Vulkan::shaderc_combined)
     target_link_libraries(vulkan-compute-hello PRIVATE Vulkan::Vulkan Vulkan::shaderc_combined)
